# Fso_Android_Wrapper

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/shivansps/fsowrapper/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 0_shaders_v1.vp  0_shaders_v2.vp  0_shaders_v3.vp  0_shaders_v5.vp  fs2_open.ini
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native_bridge.cpp  touch_controls.cpp
app/src/main/java/com/shivansps/fsowrapper/: App.java  ByteFormat.java  EngineVariant.java  GameActivity.java  MainActivity.java  NativeLibScanner.java  StorageDetector.java  StorageOption.java  StoragePermissions.java  VersionUtil.java
app/src/main/java/com/shivansps/fsowrapper/ipc/: IpcService.java
app/src/main/java/com/shivansps/fsowrapper/overlay/: NativeBridge.java  RadialDpadView.java
app/src/main/java/com/shivansps/fsowrapper/tts/: TTSManager.java
app/src/main/res/layout/: activity_main.xml  overlay_controls.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/shivansps/fsowrapper/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
